--- a/Bichos Memory.xcworkspace/xcshareddata/xcschemes/Bichos Memory.xcscheme
+++ b/Bichos Memory.xcworkspace/xcshareddata/xcschemes/Bichos Memory.xcscheme
@@ -81,7 +81,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       customArchiveName = "Bichos Memory"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
